--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			var flag = 1;
 			var myImage = document.getElementById("img");
 			var myTxt = document.getElementById("Txt");
-			var imageArray = ["Picsart_23-10-12_04-38-24-446.png", "Picsart_23-10-12_04-38-24-446.png", "Picsart_23-10-12_04-38-24-446.png"];
+			var imageArray = ["Picsart_23-10-12_04-38-24-446.png","Picsart_23-10-12_04-38-24-446.png","Picsart_23-10-12_04-38-24-446.png","Picsart_23-10-12_04-38-24-446.png", "Picsart_23-10-12_04-38-24-446.png", "Picsart_23-10-12_04-38-24-446.png"];
 			var imageIndex = 0;
 			var txtArray = ["sorry°°°,"," my dear princess♡♡"," I regret my actions◕◕. ","Let's mend✧⁠*✧⁠* ","our friendship and✯✯✯"," move forward together.✿✿✿"];
 			 var len = imageArray.length;
