--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 		</div>
 		<div id="content">
 			<h2 id="together">••meggie••</h2>
-			
+			<div id="timer">
+				<b id="d"></b> Days 
+				<b id="h"></b> Hours
+				<b id="m"></b> Minutes
+				<b id="s"></b> Seconds
+			</div>
 			
 		</div>
 
